changes to config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ analytics:
 
 # Page views settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: 'goatcounter'
 
 # Prefer color scheme setting.
 #
@@ -105,9 +105,9 @@ avatar:
 social_preview_image: # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
-toc: true
+toc: false
 
-comments:
+comments: true
   # Global switch for the post-comment system. Keeping it empty means disabled.
   provider: # [disqus | utterances | giscus]
   # The provider options are as follows:
