--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ analytics:
 
 # Page views settings
 pageviews:
-  provider: 'goatcounter'
+  provider: # 'goatcounter'
 
 # Prefer color scheme setting.
 #
@@ -107,9 +107,9 @@ social_preview_image: # string, local or CORS resources
 # boolean type, the global switch for TOC in posts.
 toc: false
 
-comments: true
+comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider:  [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
