--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ analytics:
 
 # Page views settings
 pageviews:
-  provider: # 'goatcounter'
+  provider: # now only supports 'goatcounter'
 
 # Prefer color scheme setting.
 #
@@ -109,7 +109,7 @@ toc: false
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider:  [disqus | utterances | giscus]
+  provider: # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -178,14 +178,14 @@ defaults:
     values:
       layout: post
       comments: true # Enable comments in posts.
-      toc: true # Display TOC column in posts.
+      toc: false # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
       permalink: /posts/:title/
   - scope:
       path: _drafts
     values:
-      comments: false
+      comments: true
   - scope:
       path: ""
       type: tabs # see `site.collections`
