--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: TechWithZ # the main title
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A minimal tech blog, my own small web corner.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://techwithz.github.io', note that it does not end with a '/'.
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: TechWithZ
   email: techwithz@protonmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
