--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: TechWithZ # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Tech Hobbyist # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal tech blog, my own small web corner.
